<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ramayana Dept Store</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="judul_baju">Menu Baju</string>
    <string name="baju1">Batik Anak</string>
    <string name="baju2">Batik Dewasa</string>
    <string name="baju3">Dress Anak</string>
    <string name="baju4">Dress Dewasa</string>
    <string name="baju5">Jaket Kaos</string>
    <string name="baju6">Jaket Anak</string>
    <string name="baju7">Jaket Jeans</string>
    <string name="baju8">Kaos Anak</string>
    <string name="baju9">Kaos Dewasa</string>
    <string name="baju10">Koko Anak</string>
    <string name="baju11">Koko Dewasa</string>
    <string name="baju12">Kemeja Pendek</string>
    <string name="baju13">Kemeja Panjang</string>

    <string name="defaultHarga">0</string>
    <string name="harga50000">50000</string>
    <string name="harga100000">100000</string>
    <string name="harga150000">150000</string>
    <string name="harga200000">200000</string>
    <string name="harga125000">125000</string>
    <string name="harga175000">175000</string>
    <string name="harga300000">300000</string>
    <string name="harga60000">60000</string>
    <string name="harga70000">70000</string>
    
    <string name="judul_celana">Menu Celana</string>
    <string name="celana1">Jeans Dewasa</string>
    <string name="celana2">Jeans Anak</string>
    <string name="celana3">Rok Pendek</string>
    <string name="celana4">Rok Panjang</string>
    <string name="celana5">Celana Pendek</string>
    <string name="celana6">Celana Panjang</string>
    
    <string name="judul_sendal">Menu Sendal dan Sepatu</string>
    <string name="sendal1">Adidas Sport</string>
    <string name="sendal2">Diadora Sport</string>
    <string name="sendal3">Futsal Adidas</string>
    <string name="sendal4">Futsal Diadora</string>
    <string name="sendal5">Futsal New Era</string>
    <string name="sendal6">Homyped School</string>
    <string name="sendal7">Homyped Sport</string>
    <string name="sendal8">Nike Sport</string>
    <string name="sendal9">Sandal Carvil</string>
    <string name="sendal10">Sepatu Carvil</string>
    <string name="sendal11">Sandal New Era</string>
    <string name="sendal12">Sepatu New Era</string>
    <string name="sendal13">Sendal Homyped</string>
    <string name="sendal14">Sandal Gunung</string>
    <string name="sendal15">Sepatu Sandal</string>
    
    
    <string name="diskon25">Diskon 25%</string>
    <string name="diskon40">Diskon 40%</string>
    <string name="diskon50">Diskon 50%</string>
    <string name="close">close</string>
    <string name="petunjuk">Beri nilai 0 pada barang yang TIDAK anda beli. Klik item untuk melihat detail produk</string>
    <string name="greeting">Selamat Berbelanja !!!</string>
    
    <color name="header">#2196c7</color>

</resources>
